package com.example.hipolabschallange.ui.theme

import androidx.compose.ui.graphics.Color

val AddButton = Color(0xFF2DBA4E)
val SearchBar = Color(0xFFE8E8E8)
val SearchBarStroke = Color.Black
val SearchBarShadowSpotColor = Color(0xFFE9E9F1)
val RecordCard = Color(0xFFFAFBFC)
val RecordCardStroke = Color(0xFFE8E8EB)
val RecordCardText = Color(0xFF24292E)
val RecordCardShadowSpotColor = Color(0xFFE9E9F1)
val TopBarShadowSpotColor = Color.Black