...
        Icon(
            painter = painterResource(id = SearchIcon),
            contentDescription = stringResource(id = R.string.search_icon_description),
            modifier = Modifier.padding(
                start = SearchBarIconPadding
            )
                .testTag("SearchBarIcon")
        )
        TextField(
            value = value,
            onValueChange = onValueChange,
            singleLine = true,
            maxLines = 1,
            modifier = Modifier
                .fillMaxWidth()
                .background(MaterialTheme.colorScheme.primaryContainer)
                .testTag("SearchBarTextInput"),
            keyboardActions = KeyboardActions(
                onNext = { focusManager.moveFocus(FocusDirection.Down) }
            ),
            textStyle = MaterialTheme.typography.bodyLarge,
            colors = TextFieldDefaults.textFieldColors(
                focusedIndicatorColor = Color.Transparent,
...
